Fix title display issue on mobile

--- a/wordpress/wp-content/themes/twentytwentyone-child/style.css
+++ b/wordpress/wp-content/themes/twentytwentyone-child/style.css
@@ -74,7 +74,7 @@ body { font-size: 16px; }
 /*Header*/
 .site-header { display: block; position: relative; max-width: 100%; min-height: 250px; padding-top: calc(0.75 * var(--global--spacing-vertical)); padding-bottom: calc(3 * var(--global--spacing-vertical)); z-index: 101; }
 .header-inner-wrapper { display: flex; align-items: flex-start; flex-wrap: wrap; row-gap: var(--global--spacing-vertical); max-width: var(--responsive--alignwide-width); margin-left: auto; margin-right: auto; }
-.site-branding { display: block; padding: 10px; border: 2px solid rgba(42, 42, 42, 1); border-radius: 3px; background-color: rgba(155, 118, 83, 0.94); }
+.site-branding { display: none; padding: 10px; border: 2px solid rgba(42, 42, 42, 1); border-radius: 3px; background-color: rgba(155, 118, 83, 0.94); }
 .site-header:not(.has-logo).has-title-and-tagline .site-branding { max-width: calc(100% - 100px) }
 .site-title { font-size: calc(0.95 * var(--branding--title--font-size-mobile)); font-weight: 600; text-shadow: 1.5px 2px rgba(42, 42, 42, 1); color: rgba(255, 255, 255, 1); }
 .page-header { border-bottom: 0; }
